--- a/templates/home.html
+++ b/templates/home.html
@@ -3,12 +3,25 @@
     <head>
         <meta charset="UTF-8">
         <title>Chris' Portfolio</title>
-        <link rel="stylesheet" href="{{ url_for('static', filename='style.css') }}">
         {{ bootstrap.load_css() }}
+        <link rel="stylesheet" href="{{ url_for('static', filename='style.css') }}">
     </head>
     <header>
-        <div class="navbar">
-            <h1>Chris' Portfolio</h1>
+        <div class="container-lg">
+            <nav class="navbar navbar-expand-lg bg-blue-light">
+                <div class="container-fluid">
+                    <a class="navbar-brand navy" href="{{ url_for('home') }}">Chris' Portfolio</a>
+                    <ul class="navbar-nav me-auto mb-2 mb-lg-0">
+                        <li class="nav-item">
+                            <a class="nav-link navy" href="{{ url_for('about') }}">about</a>
+                        </li>
+                    </ul>
+                </div>
+            </nav>
         </div>
     </header>
+
+    <body class="white">
+
+    </body>
 </html>
