--- a/static/style.css
+++ b/static/style.css
@@ -1,3 +1,12 @@
+body {
+    font-family: "Noto Sans";
+}
+
+.logo {
+    width: 30px;
+    height: 30px;
+}
+
 .bg-white {
     background-color: #F9F7F7;
 }
