add dummy card projects

--- a/templates/base.html.jinja
+++ b/templates/base.html.jinja
@@ -25,12 +25,12 @@
         </div>
     </nav>
 
-    <div id="content" class="">{% block content %}{% endblock content %}</div>
+    <div id="content">{% block content %}{% endblock content %}</div>
 
     <footer class="bg-blue-light py-2">
         <div class="container-lg flex-column">
             <div class="d-flex justify-content-center my-2">
-                <h2 class="navy">Contact me:</h2>
+                <h2 class="navy">contact me:</h2>
             </div>
             <div class="d-flex justify-content-center my-2">
                 <a href="mailto:christian02@hotmail.com"><img class="logo mx-2" src="{{ url_for('static', filename='logos/mail.svg') }}" alt="Email logo"></a>
@@ -38,7 +38,7 @@
                 <a href="https://www.linkedin.com/in/nahdar/"><img class="logo mx-2" src="{{ url_for('static', filename='logos/linkedin.png') }}" alt="Linkedin logo"></a>
             </div>
             <div class="d-flex justify-content-center my-2">
-                <p class="navy">Check out this page's <a href="https://github.com/Nahdar/WebPortfolio">source code</a>!</p>
+                <p class="navy">check out this page's <a href="https://github.com/Nahdar/WebPortfolio">source code</a></p>
             </div>
         </div>
     </footer>
